Migrate to gradle (#36)
* Migrate project to Gradle

* Update to Java 21

* Improve AbstractCache

* Add "UnsupportedOperationException" test for Cache default method

* Add "TestMostFrequentKeysComparator"

* Improve FrequencyContainer

* Improve RequestCounter

* Fix unit tests folders structure

* Add jacocoTestCoverageVerification

* Fail test coverage in CI only

* Add PutArgsValidationAspect

* More unit tests

* Improve cleanup files after tests

* Fix title